# shell-yeah

./: .gitignore  .oxfmtrc.json  Cargo.toml  app.ts  bacon.toml  env.d.ts  flake.nix  package.json  pnpm-lock.yaml  style.scss  tsconfig.json
assets/icons/SyPhosphor/: index.theme
modules/Bar/: index.tsx
modules/Bar/widgets/: Battery.tsx  Clock.tsx  NiriWorkspaces.tsx  Tray.tsx
nix/: package.nix  shell.nix
src/: main.rs  shell.rs  util.rs
src/component/: Popup.tsx
src/components/: BarItem.tsx  EachMonitor.ts  Icon.tsx  Modal.tsx  Notification.tsx  Popup.tsx  Symbol.tsx  Window.tsx
src/components/baritems/: Audio.tsx  Battery.tsx  Bluetooth.tsx  Clock.tsx  Launcher.tsx  Network.tsx  Power.tsx  Tray.tsx  Workspaces.tsx
src/config/: index.ts
src/lib/: EachMonitor.ts  createDebounce.ts  icons.ts  options.ts  search.ts  types.ts  windows.ts
src/lib/search/: apps.ts  index.ts
src/modules/: NotificationList.tsx  Wallpaper.tsx  bar.rs  mod.rs
src/modules/Bar/: index.tsx
src/styles/: _bar.scss  _base.scss  _launcher.scss  _notification.scss  _vars.scss
src/widgets/: mod.rs
src/widgets/baritems/: audio.rs  battery.rs  bluetooth.rs  clock.rs  launcher.rs  logout.rs  mod.rs  (+4 more)
src/window/: NotificationList.tsx  Wallpaper.tsx
src/windows/: AudioMenu.tsx  Bar.tsx  BatteryMenu.tsx  BluetoothMenu.tsx  Dock.tsx  Launcher.tsx  NetworkMenu.tsx  NotificationList.tsx  Notifications.tsx  NotificationsMenu.tsx  NotificationsPopup.tsx  OSD.tsx  PowerMenu.tsx  Wallpaper.tsx
src/workers/: battery.rs  mod.rs  network.rs  niri.rs
styles/: bar.css  bar.scss  main.css
(+15 files in other folders)
