[package]
name = "shell-yeah"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.10"
gtk4-layer-shell = "0.8.0"
log = "0.4.29"
niri-ipc = "25.11.0"
relm4 = { version = "0.11.0", features = ["gnome_49"] }
rsass = "0.29.2"
rust-embed = "8.11.0"
serde = "1.0.228"
serde_repr = "0.1.20"
tokio = { version = "1.52.1", features = ["macros"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
zbus = "5.14.0"
